# carouselmaker

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: agentic_taxonomy.md  brand_hotpink.json
src/carouselmaker/: brand.py  cli.py  config.py  models.py
src/carouselmaker/graph_carousel/: graph.py  state.py
src/carouselmaker/graph_carousel/nodes/: export.py  extract.py  figma.py
