[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carouselmaker"
version = "0.1.0"
description = "Automated LinkedIn carousel PDFs via LangGraph, Claude, and Figma MCP"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "click>=8.0",
    "pypdf>=4.0",
]

[project.scripts]
carouselmaker = "carouselmaker.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/carouselmaker"]
